--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
+# Database
 spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
-spring.datasource.username=pricing_api
-spring.datasource.password=s3cr3t
+***REMOVED***
+spring.datasource.password=
+
+***REMOVED***
+logging.level.org.springframework.web=DEBUG
+***REMOVED***
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+
 
 ***REMOVED***
 ***REMOVED***
+
+
+server.contextPath=/userinfo
+server.port=8333
