--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
 ***REMOVED***
-spring.datasource.password=
+***REMOVED***
+***REMOVED***
 
 ***REMOVED***
 logging.level.org.springframework.web=DEBUG
@@ -14,4 +14,4 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 ***REMOVED***
 
 
-server.port=8333
+***REMOVED***
