--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,16 @@
-# Database
-***REMOVED***
-***REMOVED***
-***REMOVED***
-
-***REMOVED***
-logging.level.org.springframework.web=DEBUG
-***REMOVED***
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-
-
-
-***REMOVED***
 ***REMOVED***
 
 
-***REMOVED***
+jira.url =
+jira.user = 
+jira.pass =
 
+
+wit.url = 
+wit.auth =
+
+yelp.auth.url =
+yelp.client_id =
+yelp.client_secret = 
+
+yelp.search.url = 
