--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,16 +1,16 @@
 ***REMOVED***
 
 
-jira.url =
+***REMOVED***
 jira.user =
-jira.pass =
+jira.pass = 
 
 
-wit.url =
+***REMOVED***
 wit.auth =
 
-yelp.auth.url =
+***REMOVED***
 yelp.client_id =
-yelp.client_secret =
+yelp.client_secret = 
 
-yelp.search.url = dsf
+yelp.search.url =
