--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,16 +1,16 @@
 server.port=8080
 
 
-jira.url =
+jira.url = https://jira.oceanx.com/rest/api/latest/issue/
 jira.user =
-jira.pass =
+jira.pass = 
 
 
-wit.url =
+wit.url = https://api.wit.ai/message?v=20170903&q=
 wit.auth =
 
-yelp.auth.url =
+yelp.auth.url = https://api.yelp.com/oauth2/token
 yelp.client_id =
-yelp.client_secret =
+yelp.client_secret = 
 
-yelp.search.url = dsf
+yelp.search.url =
