--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,17 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
+spring.datasource.username=root		
+spring.datasource.password=
+
+#logging levels
+logging.level.org.springframework.web=DEBUG		
+logging.level.org.hibernate=ERROR		
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG		
+
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect		
+spring.jpa.show-sql=false		
+
+
 server.port=8080
 
 
