--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,17 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
+***REMOVED***		
+spring.datasource.password=
+
+***REMOVED***
+logging.level.org.springframework.web=DEBUG		
+***REMOVED***		
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG		
+
+
+***REMOVED***		
+***REMOVED***		
+
+
 ***REMOVED***
 
 
