--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>slack-integration</finalName>
 	</build>
 
 
