--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-target/
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
@@ -32,4 +31,4 @@ application.properties
 
 # Maven
 log/
-target/
+target/*/
