--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,30 +1,31 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
-***REMOVED***		
-spring.datasource.password=
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
 
 ***REMOVED***
-logging.level.org.springframework.web=DEBUG		
-***REMOVED***		
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG		
-
-
-***REMOVED***		
-***REMOVED***		
-
-
+***REMOVED***
+***REMOVED***
 ***REMOVED***
 
 
 ***REMOVED***
-jira.user =
-jira.pass = 
+***REMOVED***
+
+***REMOVED***
 
 
 ***REMOVED***
-wit.auth =
+jira.user = userName
+jira.pass = password
+
 
 ***REMOVED***
-yelp.client_id =
-yelp.client_secret = 
+wit.auth = Bearer AUTHENTICATION_CODE
 
-yelp.search.url =
+***REMOVED***
+yelp.client_id = CLIENT_ID
+yelp.client_secret = CLIENT_SECRET
+
+yelp.auth = Bearer AUTHENTICATION_CODE
+***REMOVED***
