modifying travis.yml to read local profile

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,31 +1,31 @@
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
+spring.datasource.url=jdbc:mysql://aaqybipkk85yyf.c01nw9dbn2gc.us-west-1.rds.amazonaws.com:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=rootkiran
+hibernate.hbm2ddl.auto
 
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-
-
-***REMOVED***
-***REMOVED***
-
-***REMOVED***
+#logging levels
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=ERROR
 
 
-***REMOVED***
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
+
+server.port=8080
+
+
+jira.url = https://jira.oceanx.com/rest/api/latest/issue/
 jira.user = userName
 jira.pass = password
 
 
-***REMOVED***
+wit.url = https://api.wit.ai/message?v=20170903&q=
 wit.auth = Bearer AUTHENTICATION_CODE
 
-***REMOVED***
+yelp.auth.url = https://api.yelp.com/oauth2/token
 yelp.client_id = CLIENT_ID
 yelp.client_secret = CLIENT_SECRET
 
 yelp.auth = Bearer AUTHENTICATION_CODE
-***REMOVED***
+yelp.search.url = https://api.yelp.com/v3/businesses/search
