--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://aaqybipkk85yyf.c01nw9dbn2gc.us-west-1.rds.amazonaws.com:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=rootkiran
-hibernate.hbm2ddl.auto
+spring.datasource.password=
+
 
 #logging levels
 logging.level.org.springframework.web=ERROR
