adding logging capabilities

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -14,6 +14,11 @@ spring.jpa.show-sql=false
 
 server.port=8080
 
+logging.file=/var/log/slack/slack.log
+# Spring health check properties
+management.security.enabled=true
+endpoints.health.sensitive=false
+
 
 jira.url = https://jira.oceanx.com/rest/api/latest/issue/
 jira.user = userName
