--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -14,6 +14,10 @@ spring.jpa.show-sql=false
 
 server.port=8080
 
+endpoints.cors.allowed-origins=*
+endpoints.cors.allowed-methods=GET,POST
+
+
 logging.file=/var/log/slack/slack.log
 # Spring health check properties
 management.security.enabled=true
