--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 jdk:
   - oraclejdk8
 sudo: false
-script:  mvn clean verify -Dspring.profiles.active=local
+script:  mvn clean verify
