adding argo tickets

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -24,7 +24,7 @@ management.security.enabled=true
 endpoints.health.sensitive=false
 
 
-jira.url = https://jira.oceanx.com/rest/api/latest/issue/
+jira.url = https://jira.oceanx.com/rest/api/latest/
 jira.user = kgautam
 jira.pass = China123
 
