--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: java
 jdk:
   - oraclejdk8
 sudo: false
-script:  mvn clean verify
+script: "mvn cobertura:cobertura"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
