--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.9</version>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
