--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://54.67.69.244:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=rootkiran
 
 
 #logging levels
@@ -26,7 +26,7 @@ endpoints.health.sensitive=false
 
 jira.url = https://jira.oceanx.com/rest/api/latest/
 jira.user = kgautam
-jira.pass = China123
+jira.pass = Kathmandu123
 
 
 wit.url = https://api.wit.ai/message?v=20170903&q=
