--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -26,7 +26,7 @@ endpoints.health.sensitive=false
 slack.url.private.channel = https://slack.com/api/groups.info?
 slack.url.public.channel = https://slack.com/api/channels.info?
 slack.url.user.info = https://slack.com/api/groups.info?
-slack.token= xyg
+slack.token= empty
 
 jira.url = https://jira.oceanx.com/rest/api/latest/
 jira.user = kgautam
