--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://54.67.69.244:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://ec2-54-67-51-99.us-west-1.compute.amazonaws.com:3306/users?useSSL=false&noAccessToProcedureBodies=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=rootkiran
 
